<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pccc.utillityapp.ListMakerHome"
    tools:showIn="@layout/activity_list_maker_home">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/DefaultPadding"
        android:text="@string/TitleText"
        android:textColor="@color/DefaultTitleColour"
        android:textSize="@dimen/LargeTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getItemInput"
            android:padding="@dimen/DefaultPadding"
            android:text="@string/add_item_button_text" />

        <EditText
            android:id="@+id/itemInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/DefaultPadding" />

    </LinearLayout>

    <TextView
        android:id="@+id/itemStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/DefaultPadding"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/list_button_text"
        android:textColor="@color/DefaultTitleColour"
        android:textSize="@dimen/LargeTextSize" />

    <TextView
        android:id="@+id/listSizeNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/DefaultPadding"
        android:textColor="@color/DefaultTitleColour"
        android:textSize="@dimen/MediumTextSize" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/DefaultPadding">


    </ListView>
</LinearLayout>
